<resources>
    <string name="app_name">Ed bridge</string>
    <string name="AboutUniversity">About University</string>
    <string name="Setting">Setting</string>
    <string name="MyProfile">My Profile</string>
    <string name="MentalHealth">Mental Health</string>
    <string name="Advice">Advice</string>
    <string name="my_profile_activity_text_view">My Profile</string>
    <string name="setting_activity_text_view">Setting</string>
    <string name="navigation_home">Home</string>
    <string name="navigation_search">Search</string>
    <string name="navigation_settings">Settings</string>
    <string name="navigation_my_profile">My Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Scholarship" />
    <string name="Scholarships">Scholarships</string>
    <string name="Activity">Activity</string>
    <string name="Search">検索</string>
    <string name="hennsachi">・偏差値</string>
    <string name="tokushoku">大学の特色</string>
    <string name="location">Location</string>
    <string name="nyuushikekka">・入試結果</string>
    <string name="Account">アカウント</string>
    <string name="Notification">通知</string>
    <string name="Privacy">プライバシー</string>
    <string name="ChangePassword">パスワード変更</string>
    <string name="ChangeMailAddress">メールアドレス変更</string>
    <string name="ChangeRegistratedInformation">登録情報の変更</string>
    <string name="Language">言語</string>
    <string name="AllowNotification">通知する</string>
    <string name="DoNotAllowNotification">通知しない</string>
    <string name="AccountCentre">アカウントセンター</string>
    <string name="LoginInformation">ログイン情報</string>
    <string name="Logout">ログアウト</string>
    <string name="MailAddress">メールアドレス</string>
    <string name="DoChangeMailAddress">メールアドレスを変更する</string>
    <string name="Password">パスワード</string>
    <string name="Done">完了</string>
    <string name="CurrentPassword">現在のパスワード</string>
    <string name="NewPassword">新しいパスワード</string>
    <string name="Change">変更</string>
    <string name="NewPasswordConfirm">新しいパスワード　確認</string>
    <string name="University">University</string>
    <string name="icon">TODO</string>
    <string name="Incorrect">Incorrect</string>
    <string name="negative">negative</string>
    <string name="positive">positive</string>
    <string-array name="gender_list">
        <item>女性</item>
        <item>男性</item>
        <item>その他</item>
        <item>回答しない</item>
    </string-array>


</resources>