<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_vector"
        android:title="@string/navigation_home" />
    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_vector"
        android:title="@string/navigation_search" />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_vector"
        android:title="@string/navigation_settings" />
    <item
        android:id="@+id/navigation_my_profile"
        android:icon="@drawable/ic_person_vector"
        android:title="@string/navigation_my_profile" />
</menu>